--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,3 +86,12 @@ input[type="range"]::-moz-range-thumb {
   opacity: 0;
 }
 
+/* ============= Responsive Styles ============= */
+
+@media screen and (max-width: 1100px) {
+
+  
+
+}
+
+/* ============= Responsive Styles ============= */
