--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,12 +86,161 @@ input[type="range"]::-moz-range-thumb {
   opacity: 0;
 }
 
+.mobile-nav-shadow{
+  box-shadow: -4px 0px 12px rgba(0, 0, 0, 0.1);
+}
+
 /* ============= Responsive Styles ============= */
 
+@media screen and (min-width: 1100px) {
+
+  .mobile-menu{
+    display: none;
+  }
+  .nav-links{
+    display: block;
+  }
+
+}
 @media screen and (max-width: 1100px) {
 
-  
+  .mobile-menu{
+    display: block;
+  }
 
+  .nav-links{
+    display: none;
+  }
+
+}
+
+@media screen and (max-width: 1000px) {
+
+  .page-header-heading{
+    font-size: 35px;
+  }
+  .page-header-home, .page-header-home-sub-class{
+    font-size: 20px;
+  }
+  .page-header-home{
+    margin-top: 0px;
+  }
+  
+}
+
+@media screen and (max-width: 800px) {
+
+  .page-header-heading{
+    font-size: 30px;
+  }
+  .page-header-home, .page-header-home-sub-class{
+    font-size: 19px;
+  }
+  .page-header-home{
+    margin-top: 0px;
+  }
+  
+}
+
+@media screen and (max-width: 600px) {
+
+  .page-header-heading{
+    font-size: 28px;
+  }
+  .page-header-home, .page-header-home-sub-class{
+    font-size: 18px;
+  }
+  .page-header-home{
+    margin-top: -2px;
+  }
+  .page-header-image{
+    width: 95%;
+  }
+  
+}
+
+@media screen and (max-width: 480px) {
+
+  .page-header-heading{
+    font-size: 25px;
+  }
+  .page-header-home, .page-header-home-sub-class{
+    font-size: 17px;
+  }
+  .page-header-home{
+    margin-top: -6px;
+    margin-bottom: 6px;
+  }
+  
+}
+
+@media screen and (max-width: 425px) {
+
+  .page-header-heading{
+    font-size: 22px;
+  }
+  .page-header-home, .page-header-home-sub-class{
+    font-size: 16px;
+  }
+  .page-header-home{
+    margin-top: -5px;
+    margin-bottom: 10px;
+  }
+  
+}
+
+@media screen and (max-width: 1100px) {
+.answer-text{
+width: 95% !important;
+}
+    
+
+}
+@media screen and (max-width: 900px) {
+
+  .faq-question-container{
+    width: 90%;
+    min-height: 50px !important;
+    padding: 40px 20px;
+  }
+  
+}
+
+@media screen and (max-width: 800px) {
+  
+  .question-text{
+  font-size: 20px;
+}
+.answer-text{
+  font-size: 16px;
+  margin-top: 8px !important;
+}
+.faq-dropdown-icon{
+  min-height: 46px;
+  max-height: 46px;
+  min-width: 46px;
+  max-width: 46px;
+}
+
+}
+@media screen and (max-width: 600px) {
+  .faq-question-container{
+    width: 95%;
+    min-height: 50px !important;
+    padding: 35px 15px;
+    margin-top: 15px;
+  }
+  .faq-dropdown-icon{
+    min-height: 40px;
+    max-height: 40px;
+    min-width: 40px;
+    max-width: 40px;
+  }
+  .question-text{
+    font-size: 19px;
+  }
+ 
+  
 }
 
 /* ============= Responsive Styles ============= */
