--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,14 +7,14 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* --background: #ffffff;
+  --foreground: #171717; */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    /* --background: #0a0a0a;
+    --foreground: #ededed; */
   }
 }
 
@@ -92,9 +92,21 @@ body {
   &:hover{
     transform: scale(1.1);
     box-shadow: 0px 0px 8px 8px #ad56ff;
-    font-size: 38px;
+    font-size: 22px;
     font-weight: 600;
   }
+}
+
+.faqCard{
+  transition: .4s;
+  &:hover > div > div > img{
+    transition: .8s;
+    transform: rotate(720deg);   
+  }
+  /* &:hover > div > div{
+    transition: .4s;
+    background-color: #A33AB9;
+  } */
 }
 
 .button-border {
