--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -182,6 +182,72 @@ input[type="range"]::-moz-range-thumb {
 
 /* ============= animated Btn ============= */
 
+.SVG-ray-cont{
+  height: 4px;
+  width: full;
+  background-color: #e037d558;
+  position: relative;
+  z-index: 5;
+  overflow: hidden;
+   &::before{
+    content: '';
+    height: 100%;
+    width: 10%;
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    background: linear-gradient(to right, white, #da47d000);
+    z-index: 6;
+  }
+  &::after{
+    content: '';
+    height: 100%;
+    width: 10%;
+    position: absolute;
+    right: 0%;
+    top: 0%;
+    background: linear-gradient(to left, white, #da47d000);
+    z-index: 6;
+  }
+}
+
+.SVG-ray{
+  height: 100%;
+  width: 8px;
+  background-color: #7525BF;
+  border-radius: 50%;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  z-index: 1;
+  transition: 1s;
+  animation: ray 1.5s infinite ease-in-out;
+}
+
+@keyframes ray{
+  0%{
+     transform: translateX(0);
+     box-shadow: none;
+  }
+  25%{
+    box-shadow: none;
+  }
+  50%{
+    box-shadow: 0px 0px 4px 4px #D943C6,
+    0px 0px 8px 8px #d086c6;
+  }
+  75%{
+    box-shadow: none;
+  }
+  100%{
+    transform: translateX(6000%);
+    box-shadow: none;
+  }
+
+}
+
+/* ============= animated Btn ============= */
+
  
 .animatedBtn {
   padding: 6px 1rem;
