--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,12 @@ body {
   box-shadow: 0px 4px 18px 8px rgba(0, 0, 0, 0.25);
 }
 
+.nav-logo-1{
+  filter: contrast(120%) brightness(105%) url(#sharpen-filter);
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
 .bgBtnShadow{
   position: relative;
   overflow: hidden;
@@ -403,8 +409,7 @@ input[type="range"]::-moz-range-thumb {
 
 
 /* ============= gear rotater ============= */
-
-/* From Uiverse.io by Shoh2008 */ 
+ 
 .gear-rotater {
   width: 48px;
   height: 48px;
