--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,12 @@ body {
   image-rendering: pixelated;
 }
 
+.roadmap-img{
+  filter: contrast(120%) brightness(105%);
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
 .bgBtnShadow{
   position: relative;
   overflow: hidden;
